# scancode-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: import.rs  lib.rs  models.rs
tests/data/licenses/: w3c-docs-19990405.yml
